Fix flex on mobile display of player choice icons

--- a/style.css
+++ b/style.css
@@ -272,9 +272,7 @@ body {
     .header h1{
         font-size: 1.6em;
     }
-    .playerselection h3{
-        /*figure out how to break to own row*/
-    }
+    
     .playerchose i,
     .computerchose i,
     .computerwin,
@@ -290,6 +288,13 @@ body {
     .playerselection{
         flex-direction: row;
         margin-bottom: 2.5em;
+        flex-wrap: wrap;
+    }
+    .playerselection .heading{
+     flex: 0 1 100%;
+    }
+    .playerselection .playerchoice{
+        flex: 1 0 33%;
     }
     .playerselection .playerchoice i{
         font-size: 4.5em;
@@ -311,6 +316,9 @@ body {
     .nowinner {
         font-size: 10em;
 
+    }
+    .playerselection .playerchoice i{
+        font-size:3em;
     }
 }
 
